# chat-gpt

./: CMakeLists.txt  README.md  cmake_update.txt  how_to_add_package.txt  set_up_commands.txt
code/: JsonManagment.cpp  chat_client.cpp  chat_message.hpp  chat_server.cpp  crypto.cpp  crypto.hpp  encrypt.cpp  json.hpp  jsonManagment.hpp  nonce.hpp  test.cpp
documents/: ProjectPortfolioGroup16.docx
